--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TutorCollective extra</title>
+<title>TutorCollective</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= stylesheet_link_tag    "application", :media => "all" %>
 <%= javascript_include_tag "application" %>
@@ -26,10 +26,10 @@
         </li>
         <% else %>
         <li>
-        <%= link_to 'Register', register_path %>
+        <button class="btn" type="button">Sign In</button>
         </li>
         <li>
-        <%= link_to 'Login', login_path %>
+        <button class="btn" type="button">Become a Tutor</button
         </li>
         <% end %>
       </ul>
